# custom_planner_slam

./: frames_2025-06-28_22.56.45.gv  readme.md  send_goal.sh
src/: frames_2025-06-28_22.38.48.gv  ps1map1.yaml
src/dijkstra_planner/: CMakeLists.txt  dijkstra_planner_plugin.xml
src/dijkstra_planner/launch/: dijkstra_navigation.launch.py  test_dijkstra.launch.py
src/dijkstra_planner/params/: dijkstra_test_params.yaml  nav2_params_dijkstra.yaml
src/dijkstra_planner/src/: dijkstra_planner.cpp
src/install/: local_setup.sh  setup.sh
src/install/dijkstra_planner/include/dijkstra_planner/: dijkstra_planner.hpp
src/install/dijkstra_planner/share/ament_index/resource_index/package_run_dependencies/: dijkstra_planner
src/install/dijkstra_planner/share/dijkstra_planner/: dijkstra_planner_plugin.xml  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/dijkstra_planner/share/dijkstra_planner/cmake/: ament_cmake_export_dependencies-extras.cmake  dijkstra_plannerConfig.cmake
src/install/explore_lite/share/explore_lite/: package.sh
src/install/explore_lite/share/explore_lite/config/: params.yaml  params_costmap.yaml
src/install/multirobot_map_merge/share/multirobot_map_merge/: local_setup.sh  package.sh
src/install/turtlebot3/share/turtlebot3/: local_setup.sh  package.sh
src/install/turtlebot3_autonomous_exploration/lib/turtlebot3_autonomous_exploration/: autonomous_explorer  exploration_controller  exploration_recovery  exploration_supervisor  frontier_detector
src/install/turtlebot3_autonomous_exploration/share/turtlebot3_autonomous_exploration/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/turtlebot3_autonomous_exploration/share/turtlebot3_autonomous_exploration/config/: exploration_params.yaml
src/install/turtlebot3_bringup/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_bringup
src/install/turtlebot3_bringup/share/turtlebot3_bringup/: local_setup.sh  package.sh
src/install/turtlebot3_cartographer/share/turtlebot3_cartographer/: local_setup.sh  package.sh
src/install/turtlebot3_description/share/turtlebot3_description/: package.sh
src/install/turtlebot3_example/share/turtlebot3_example/: package.sh
src/install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
src/install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.sh  package.sh
src/install/turtlebot3_gazebo/share/turtlebot3_gazebo/: package.sh
src/install/turtlebot3_navigation2/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_navigation2
src/install/turtlebot3_navigation2/share/turtlebot3_navigation2/: local_setup.sh  package.sh
src/install/turtlebot3_navigation2/share/turtlebot3_navigation2/param/: waffle.yaml
src/install/turtlebot3_node/share/turtlebot3_node/: package.sh
src/install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.sh  package.sh
src/install/turtlebot3_teleop/share/turtlebot3_teleop/: package.sh
src/log/: latest_build
src/turtlebot3/turtlebot3_cartographer/config/: turtlebot3_lds_2d.lua
src/turtlebot3/turtlebot3_cartographer/launch/: cartographer.launch.py
src/turtlebot3_autonomous_exploration/: package.xml  setup.py
src/turtlebot3_autonomous_exploration/launch/: autonomous_exploration.launch.py
src/turtlebot3_autonomous_exploration/rviz/: autonomous_exploration.rviz
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_small_house_simple.launch.py  turtlebot3_world.launch.py
