<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_autonomous_exploration</name>
  <version>1.0.0</version>
  <description>Autonomous exploration package for TurtleBot3 using ROS2</description>
  
  <maintainer email="anish@example.com">Anish Kumar</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <!-- TF2 dependencies -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Navigation dependencies -->
  <depend>nav2_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_navigation</depend>
  
  <!-- Action dependencies -->
  <depend>action_msgs</depend>
  <depend>rclpy_action</depend>
  
  <!-- TurtleBot3 dependencies -->
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_cartographer</depend>
  <depend>turtlebot3_navigation2</depend>
  
  <!-- Python dependencies -->
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  
  <!-- Launch dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>